feat(*): new daily news

--- a/src/content/doc/2024-07-09.mdx
+++ b/src/content/doc/2024-07-09.mdx
@@ -2,7 +2,7 @@
 title: 'Daily news: 微软要求中国员工从9月起仅使用iPhone进行工作，以提高网络安全'
 desc: 'Daily news: 微软要求中国员工从9月起仅使用iPhone进行工作，以提高网络安全 | DevNow'
 publishDate: '2024-07-09 13:00:00'
-image: 'https://cdn.laughingzhu.cn/DevNow/gi1n7J9pHuX6WQsuuoshu.png'
+image: 'https://cdn.laughingzhu.cn/DevNow/gi1n7J9pHuX6WQsuuoshu.jpg'
 category: 'devnow'
 author: 'DevNow'
 tags: [Daily, Tech, News]
