fix(*): format docs

--- a/src/content/doc/2021-03-04.mdx
+++ b/src/content/doc/2021-03-04.mdx
@@ -18,8 +18,8 @@ tags: [Blog, Browser]
 
 数据包要在互联网上进行传输，就要符合网络协议（简称IP）标准。互联网上不同的在线设备都有一个唯一的地址，地址就是一个数字即IP地址。这和我们购物的收货地址很像，购物时，你只需要填一个收货地址，物流就能把包裹送到你家。
 
-**计算机的地址统称为IP地址，访问任何网站实际上只是你的计算机（Client）向另外一台计算机（Service）请求信息。**
-\*\*
+**计算机的地址统称为IP地址，访问任何网站实际上只是你的计算机（Client）向另外一台计算机（Service）请求信息**。
+
 如果要想把一个数据包从主机 A 发送给主机 B，那么在传输之前，数据包上会被附加上主机 B 的 IP 地址信息，这样在传输过程中才能正确寻址。额外地，数据包上还会附加上主机 A 本身的 IP 地址，有了这些信息主机 B 才可以回复信息给主机 A。这些附加的信息会被装进一个叫 IP 头的数据结构里。IP 头是 IP 数据包开头的信息，包含 IP 版本、源 IP 地址、目标 IP 地址、生存时间等信息。
 
 这里我们把网络简单分为三层结构，如下图：
@@ -95,9 +95,17 @@ UDP协议下的数据包A -> B：
 
 - **最后，断开连接阶段**。数据传输完成之后，就要终止连接了，涉及到最后一个阶段“**四次挥手**”来保证双方都能断开连接。
 
+### 为什么不是两次握手?
+
+如果是两次握手，发送端可以确定自己发送的信息能对方能收到，也能确定对方发的包自己能收到，但接收端只能确定对方发的包自己能收到 无法确定自己发的包对方能收到并且两次握手的话,客户端有可能因为网络阻塞等原因会发送多个请求报文，延时到达的请求又会与服务器建立连接，浪费掉许多服务器的资源。
+
 TCP为了保证数据传输的可靠性，牺牲了数据包的传输速度，因为“三次握手”和“数据包校验机制”等把传输过程中的数据包的数量提高了一倍。
 
-简单的总结一下：
+### 为什么是四次挥手？
+
+服务端在收到客户端断开连接 Fin 报文后，并不会立即关闭连接，而是先发送一个 ACK 包先告诉客户端收到关闭连接的请求，只有当服务器的所有报文发送完毕之后，才发送 FIN 报文断开连接，因此需要四次挥手
+
+## 总结
 
 - 互联网中的数据是通过数据包来传输的，数据包在传输过程中容易丢失或出错。
 - IP负责把数据包送达到目主机。
