--- a/src/content/doc/2021-04-15.mdx
+++ b/src/content/doc/2021-04-15.mdx
@@ -8,7 +8,7 @@ author: 'LaughingZhu'
 tags: [Blog, Browser]
 ---
 
-之前的一篇文章[HTTP/1](https://blog.laughingzhu.cn/detail/7)中简单介绍了一下HTTP/1.1的发展过程，虽然HTTP/1.1已经做了大量的优化，但依然存在很多性能瓶颈，对于日益增长的需求性能无法满足。
+之前的一篇文章[HTTP/1](/posts/2021-04-12)中简单介绍了一下HTTP/1.1的发展过程，虽然HTTP/1.1已经做了大量的优化，但依然存在很多性能瓶颈，对于日益增长的需求性能无法满足。
 
 我们知道HTTP/1.1为网络效率做了大量的优化，最核心的大概有如下三种方式：
 
