--- a/src/content/doc/2022-08-30.mdx
+++ b/src/content/doc/2022-08-30.mdx
@@ -32,8 +32,7 @@ tags: [Blog, Browser]
 - 浏览器每次发起请求，都会在浏览器缓存中查找该请求的结果以及缓存标识
 - 浏览器每次拿到返回的请求结果都会将该结果和缓存标识存入浏览器缓存中
 
-以上两点结论就是浏览器缓存机制的关键，它确保了每个请求的缓存存入和读取，只要我们再理解浏览器缓存的使用规则，那么浏览器缓存也就没什么难度了。为了方便大家理解，这里根据是否需要向服务器重新发起HTTP请求将缓存过程分为了两个部分：**\*强制缓\*\***存\*\*\*和**_协商缓存。_**
-\_
+以上两点结论就是浏览器缓存机制的关键，它确保了每个请求的缓存存入和读取，只要我们再理解浏览器缓存的使用规则，那么浏览器缓存也就没什么难度了。为了方便大家理解，这里根据是否需要向服务器重新发起HTTP请求将缓存过程分为了两个部分： **强制缓存** 和 **协商缓存** 。
 
 ### 强制缓存
 
@@ -41,24 +40,24 @@ tags: [Blog, Browser]
 
 1. **不存在该缓存结果和缓存标识，强制缓存失效，则直接向服务器发起请求（跟第一次发起请求一致）**，如下图：![image.png](https://cdn.laughingzhu.cn/1585321335597-6881ff9c-bddf-45ce-8146-73c30e2c26c5.png)
 
-2. **存在该缓存的结果和缓存标识，但是该结果已经失效，则使用协商缓存（暂不分析），**如下图：![image.png](https://cdn.laughingzhu.cn/1585321508537-3d67b7ec-3e83-4089-b49b-c3ff1a7b8a4d.png)
+2. **存在该缓存的结果和缓存标识，但是该结果已经失效，则使用协商缓存（暂不分析）**，如下图：![image.png](https://cdn.laughingzhu.cn/1585321508537-3d67b7ec-3e83-4089-b49b-c3ff1a7b8a4d.png)
 
 3. **存在该缓存结果，且该结果尚未失效，强制缓存生效，直接返回该结果（这时不会发起HTTP请求）**，如下图：![image.png](https://cdn.laughingzhu.cn/1585321587820-c3637aa1-b46a-47ad-bab5-e27130968ba8.png)
 
 > 那么强制缓存的缓存规则是什么？
 
-当浏览器想服务器发起请求时，服务器会将缓存规则放入HTTP响应报文的HTTP头中和请求结果一起返回给浏览器，控制强制缓存的字段分别是Expires和Cache-Control,其中**_优先级 _**Cache-Control **>>** Expires
+当浏览器想服务器发起请求时，服务器会将缓存规则放入HTTP响应报文的HTTP头中和请求结果一起返回给浏览器，控制强制缓存的字段分别是Expires和Cache-Control,其中优先级  `Cache-Control` >> `Expires`
 
-**Expires**
-**
-Expires是HTTP/1.0控制网页缓存的字段，其值为服务器返回**该请求结果缓存的到期时间，\*\*即再次发送该请求时，如果客户端的时间小于Expires的值时，直接使用缓存结果。
+### Expires
+
+Expires是HTTP/1.0控制网页缓存的字段，其值为服务器返回\*\*该请求结果缓存的到期时间，\*\*即再次发送该请求时，如果客户端的时间小于Expires的值时，直接使用缓存结果。
 
 > Expires是HTTP/1.0的字段，但是现在浏览器默认使用的是HTTP/1.1，那么在HTTP/1.1中网页缓存还是否由Expires控制？
 
 到了HTTP/1.1，Expires已经被Cache-Control替代，原因在于Expires控制缓存的原理是使用客户端的时间与服务端返回的时间做对比，那么如果客户端与服务端的时间因为某些**原因**（例如时区不同、客户端和服务端有一段的时间不准确）发生误差，那么强制缓存则会直接失效，这样的话强制缓存的存在则毫无意义，那么Cache-Control又是怎么控制的呢？
 
-**Cache-Control**
-\*\*
+### Cache-Control
+
 在HTTP/1.0中，Cache-Control是最重要的规则，主要用于控制网页缓存，主要取值为：
 
 - public：所有内容都将被缓存（客户端和代理服务器都可缓存）
