--- a/src/content/doc/2021-04-12.mdx
+++ b/src/content/doc/2021-04-12.mdx
@@ -1,7 +1,7 @@
 ---
 title: HTTP_1：HTTP性能优化
 desc: 浏览器中的网络第一讲（HTTP/1.0发展及性能优化）
-publishDate: '2021-04-13'
+publishDate: '2021-04-12'
 image: https://cdn.laughingzhu.cn/5eb1c5e7-3ff7-4f95-8795-ce823687cb10.png
 category: blog
 author: LaughingZhu
@@ -12,8 +12,7 @@ tags: [Blog, Browser]
 
 ## 超文本传输协议 HTTP/0.9
 
-\*\*
-TTP/0.9 是于 1991 年提出的，主要用于学术交流，需求很简单——用来在网络之间传递 HTML 超文本的内容，所以被称为超文本传输协议。整体来看，采用了基于请求响应的模式，从客户端发出请求，服务器返回数据。
+HTTP/0.9 是于 1991 年提出的，主要用于学术交流，需求很简单——用来在网络之间传递 HTML 超文本的内容，所以被称为超文本传输协议。整体来看，采用了基于请求响应的模式，从客户端发出请求，服务器返回数据。
 
 ### 一个基于HTTP/0.9的请求流程
 
@@ -52,7 +51,7 @@ HTTP/1.0 每进行一次 HTTP 通信，都需要经历建立 TCP 连接、传输
 #### 2.提供虚拟主机的支持
 
 在 HTTP/1.0 中，每个域名绑定了一个唯一的 IP 地址，因此一个服务器只能支持一个域名。但是随着虚拟主机技术的发展，需要实现在一台物理主机上绑定多个虚拟主机，每个虚拟主机都有自己的单独的域名，这些单独的域名都公用同一个 IP 地址。
-因此，HTTP/1.1 的请求头中增加了** Host 字段**，用来表示当前的域名地址，这样服务器就可以根据不同的 Host 值做不同的处理。
+因此，HTTP/1.1 的请求头中增加了 **Host 字段** ，用来表示当前的域名地址，这样服务器就可以根据不同的 Host 值做不同的处理。
 
 ####
 
