feat(*): new docs

--- a/src/content/doc/weekly-2024-07-15.mdx
+++ b/src/content/doc/weekly-2024-07-15.mdx
@@ -16,7 +16,7 @@ tags: [Weekly, Tech, News]
 
 这一限制在Redmi Note 13系列上已经实施，预计未来其他机型也将陆续跟进。
 
-![小米采取措施禁止国行设备运行国际版系统](https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2024%2F0709%2F4f009381j00sgc4sd000jd000dx00fpg.jpg&thumbnail=660x2147483647&quality=80&type=jpg)
+![小米采取措施禁止国行设备运行国际版系统](https://cdn.laughingzhu.cn/DevNow/bbfb619c266925656bb2e03e5b47368c-69c36b.jpeg)
 
 ## [2.特朗普在宾夕法尼亚州集会上遭枪击](https://www.youtube.com/watch?v=XL3D0h5j0Lo)
 
