feat(*): change domain

--- a/src/content/doc/callouts.mdx
+++ b/src/content/doc/callouts.mdx
@@ -46,3 +46,7 @@ tags: [DevNow, Astro, MDX]
 :::danger[危险]
 记得关注DevNow，您的支持对我来说非常的重要。
 :::
+
+## 参考链接
+
+- [Astro 搭建博客系列：添加 Aside 提示组件](https://www.jizhule.cn/posts/astro-%E6%90%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2%E7%B3%BB%E5%88%97%E6%B7%BB%E5%8A%A0-aside-%E6%8F%90%E7%A4%BA%E7%BB%84%E4%BB%B6)
