--- a/src/content/doc/taro-jsx-to-wxml.mdx
+++ b/src/content/doc/taro-jsx-to-wxml.mdx
@@ -103,7 +103,7 @@ Taro3 引入了运行时（Runtime）的概念，允许在运行时进行部分 
 
 Taro3 的设计使得它能够更好地支持复杂的应用场景和动态特性，尽管引入了运行时带来了一些开销，但总体上提高了开发的灵活性和一致性。
 
-> 传送门：可以参考 [这篇文章](https://devnow.laughingzhu.cn/posts/2023-11-25/) 来了解 **编译时** 和 **运行时** 的各自优势
+> 传送门：可以参考 [这篇文章](https://www.laughingzhu.cn/posts/2023-11-25/) 来了解 **编译时** 和 **运行时** 的各自优势
 
 ## 五、参考文章
 
