fix(*): new docs

--- a/src/content/doc/react-update.mdx
+++ b/src/content/doc/react-update.mdx
@@ -2,7 +2,7 @@
 title: '浅谈 React Update'
 desc: 'Blog: 浅谈 React Update'
 publishDate: '2024-07-18 12:00:00'
-image: 'https://cdn.laughingzhu.cn/DevNow/50f23794f34e5f8be3a1a78f12f317e2-fe55bf.jpeg'
+image: 'https://cdn.laughingzhu.cn/DevNow/4e22022397afd217bc5a36db80adacc0-3a1b68.png'
 category: 'blog'
 author: 'LaughingZhu'
 tags: [Blog, React]
