upd(*): pin doc

--- a/src/content/doc/2024-06-28.mdx
+++ b/src/content/doc/2024-06-28.mdx
@@ -3,10 +3,9 @@ title: '介绍一下 DevNow 的实现'
 desc: '熬了两天，把 DevNow 搞了出来，这里介绍下用到技术栈及后续的一些迭代计划。'
 publishDate: '2024-06-28'
 image: 'https://images.unsplash.com/photo-1611224885990-ab7363d1f2a9?q=80&w=3139&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
-category: 'blog'
+category: 'devnow'
 author: 'LaughingZhu'
 tags: [Weekly, Blog, Tech, News, Devnow]
-pin: true
 ---
 
 **👏🏻 欢迎大家关注 DevNow**
