--- a/src/content/doc/callouts.mdx
+++ b/src/content/doc/callouts.mdx
@@ -6,6 +6,7 @@ image: 'https://cdn.laughingzhu.cn/DevNow/41b6484cc73cf1883052519c00358ce8-db313
 category: 'devnow'
 author: 'LaughingZhu'
 tags: [DevNow, Astro, MDX]
+pin: true
 ---
 
 ## 前言：
