--- a/src/content/doc/webpack-basic.mdx
+++ b/src/content/doc/webpack-basic.mdx
@@ -11,13 +11,16 @@ tags: [Blog, LaughingZhu, Webpack]
 ## 一、webpack的能力
 
 1. 编译代码能力： 提高效率，解决浏览器兼容问题。（ES6+ => ES5）
-   ![编译](https://cdn.laughingzhu.cn/DevNow/6c0dd07c382e23d2407a163b3ecc71ee-91d10c.png)
+
+![编译](https://cdn.laughingzhu.cn/DevNow/6c0dd07c382e23d2407a163b3ecc71ee-91d10c.png)
 
 2. 模块整合能力：提高性能，可维护性，解决浏览器频繁请求文件。
-   ![模块整合](https://cdn.laughingzhu.cn/DevNow/5282d65a21b6a2d60219379d7071ea0c-59aca9.png)
+
+![模块整合](https://cdn.laughingzhu.cn/DevNow/5282d65a21b6a2d60219379d7071ea0c-59aca9.png)
 
 3. 万物皆可模块化：项目维护性增强，支持不同种类的模块类型，统一的模块化方案，所有的资源文件都可通过代码控制。
-   ![模块](https://cdn.laughingzhu.cn/DevNow/61d8c2fcc51261e4e7c01dd1373e9679-cf9511.png)
+
+![模块](https://cdn.laughingzhu.cn/DevNow/61d8c2fcc51261e4e7c01dd1373e9679-cf9511.png)
 
 ## 二、webpack热更新实现及原理
 
@@ -411,18 +414,17 @@ module.exports = function (source) {
 
 ```js
 class MyPlugin {
-	// webpack 会调用 MyPlugin 实例的 apply 方法给插件实例传入 complier 对象
-	apply (compiler) {
-		// 找到合适的事件钩子，实现自己的插件功能
-		compliler.hooks.emit.tap('MyPlugin', compilation => {
-			// compilation: 当前打包构建流程的上下文
-			console.log(compilation);
+  // webpack 会调用 MyPlugin 实例的 apply 方法给插件实例传入 complier 对象
+  apply(compiler) {
+    // 找到合适的事件钩子，实现自己的插件功能
+    compiler.hooks.emit.tap('MyPlugin', (compilation) => {
+      // compilation: 当前打包构建流程的上下文
+      console.log(compilation);
 
-			// do somethins...
-		})
-	}
+      // do somethins...
+    });
+  }
 }
-
 ```
 
 在 emit 事件发生时，代表源文件的转换和组装已经完成，可以读取到最终将输出的资源、代码块。模块及其依赖，并且可以修改输出资源的内容。
