--- a/src/content/doc/2021-03-05.mdx
+++ b/src/content/doc/2021-03-05.mdx
@@ -269,7 +269,7 @@ quill.on('text-change', function () {
 #### getContents（）
 
 检索编辑器的内容，格式化返回一个[Delta](https://quilljs.com/docs/delta/)对象。一个类数组的格式。
-如果有需要**直接获取html标签的**可以通过**quill\*\***.container.innerHTML\*\*获取到，直接渲染到HTML中即可显示。
+如果有需要**直接获取html标签的**可以通过 `quill.container.innerHTML` 获取到，直接渲染到HTML中即可显示。
 
 以上就是我目前在我的博客系统中对于Quill富文本编辑器的一些记载和遇到的问题，仅供参考鸭🦆~
 有问题可留言交流。
