--- a/src/content/doc/2022-04-08.mdx
+++ b/src/content/doc/2022-04-08.mdx
@@ -10,7 +10,7 @@ tags: [Blog, JavaScript]
 
 # Render阶段概览
 
-我们知道 Fiber Reconciler 是从\*\* **Stack Reconciler 重构而来，通过遍历的方式实现可中断的递归，所以Render可以分为**"递"和"归"\*\*两部分。
+我们知道 Fiber Reconciler 是从 **Stack Reconciler** 重构而来，通过遍历的方式实现可中断的递归，所以Render可以分为"递"和"归"两部分。
 
 **"递"阶段（生成Fiber树的过程）**
 
