feat(*): upd doc

--- a/src/content/doc/good-blog.mdx
+++ b/src/content/doc/good-blog.mdx
@@ -15,7 +15,7 @@ pin: true
 
 原因为总结了几点：
 
-- 作为程序语言，怎么能没有自己的博客呢。
+- 作为程序员，怎么能没有自己的博客呢。
 - 用来沉淀自己的一些学习内容和记录一些技术文章。
 - 促进自己持续输出一些内容，来提高语言表达能力。
 - 个人属性吧，觉得有一个属于自己的平台，那真是，泰裤辣。
@@ -60,7 +60,7 @@ Github地址： https://github.com/LaughingZhu/DevNow
 
 ## 4. 技术栈
 
-- [Astro](https://astro.build/) : **Astro 是一个集多功能于一体的 Web 框架。**它内置包含了你构建网站所需的一切。还有数百个不同的[集成](https://astro.build/integrations/)和 [API 钩子](https://docs.astro.build/zh-cn/reference/integrations-reference/)可根据你的具体用例和需求定制你的项目。
+- [Astro](https://astro.build/) : Astro 是一个集多功能于一体的 Web 框架。它内置包含了你构建网站所需的一切。还有数百个不同的[集成](https://astro.build/integrations/)和 [API 钩子](https://docs.astro.build/zh-cn/reference/integrations-reference/)可根据你的具体用例和需求定制你的项目。
 - **TypeScript**
 - **Tailwind CSS**
 - **Mdx** (大家在投稿或者写文章时，优先使用.mdx，格式和md一样，只不过.mdx对于上边提到的功能支持度是最高的)。
