fix(*): fix doc

--- a/src/content/doc/2021-04-14.mdx
+++ b/src/content/doc/2021-04-14.mdx
@@ -10,7 +10,7 @@ tags: [Blog, Browser]
 
 “**浏览器中，从输入URL到页面呈现出来，中间发生了什么？**”这是一道相当经典的面试题了，可以全面了解一个人知识的掌握程度，期中涉及到了网络、操作系统、浏览器、Web等一系列的知识。我之前的了解大概有下边这几点：
 
-1. DNS寻址：由域名（www.baidu.com）找到对应的ip地址（110.242.68.3）。
+1. DNS寻址：由域名 `www.baidu.com` 找到对应的ip地址 `110.242.68.3` 。
 2. 浏览器缓存：强制缓存、协商缓存。
 3. TCP三次握手。
 4. 发起HTTP请求。
