feat(*): fix doc

--- a/src/content/doc/wekkly-2024-08-05.mdx
+++ b/src/content/doc/wekkly-2024-08-05.mdx
@@ -16,7 +16,7 @@ tags: [Weekly, Tech, News]
 
 ## [2. 1.5元骑10分钟 多地共享单车上调起步价](https://weibo.com/2682454221/OpLx8rMCX)
 
-![2. 1.5元骑10分钟 多地共享单车上调起步价](https://wx3.sinaimg.cn/mw690/9fe300cdly1hs4nxk5gbzj20ir0bnn6l.jpg)
+![2. 1.5元骑10分钟 多地共享单车上调起步价](https://cdn.laughingzhu.cn/DevNow/a938e95ab350db9c159084a09d9baf01-56d2f1.jpeg)
 
 据《北京青年报》报道，哈啰、青桔等共享单车品牌在成都、广州、武汉等城市，将工作日的起步价从“前 15 分钟 1.5 元”调整为“前 10 分钟 1.5 元。”之后为每 15 分钟 1 元。
 
