feat(*): new doc

--- a/src/content/doc/2024-06-19.mdx
+++ b/src/content/doc/2024-06-19.mdx
@@ -1,6 +1,6 @@
 ---
-title: interface 和 type 的区别
-desc: TypeScript 中 interface 和 type 的区别呢？
+title: 'interface 和 type 的区别'
+desc: 'TypeScript 中 interface 和 type 的区别呢？'
 publishDate: '2024-06-19'
 image: https://cdn.laughingzhu.cn/g6avJhmH9FSuT6oltL3Nl.png
 category: blog
