feat(*): fix canonical

--- a/src/content/doc/2021-03-04.mdx
+++ b/src/content/doc/2021-03-04.mdx
@@ -74,7 +74,7 @@ UDP协议下的数据包A -> B：
 
 - 大文件会被拆分成很多小的数据包来传输，这些小的数据包会经过不同的路由，并在不同的时间到达接收端，而UDP协议并不知道如何组装这些数据包，从而把数据包还原成完整的文件。
 
-基于这两个问题，我们引入了TCP。**TCP（Transmission Control Protocol，传输控制协议）是一种**面向连接的**、**可靠的**、**基于字节流**的传输层通信协议。**相对于UDP，TCP有下面两个特点：
+基于这两个问题，我们引入了TCP。**TCP（Transmission Control Protocol，传输控制协议）** 是一种 **面向连接的** 、**可靠的** 、**基于字节流** 的传输层通信协议。相对于UDP，TCP有下面两个特点：
 
 - 对于数据包丢失的情况，TCP提供重传机制；
 
